Fix more spots where the block names shifted with the theme change (breadcrumbs, social logos in footer, alerts)

--- a/components/02-compounds/site/_footer.scss
+++ b/components/02-compounds/site/_footer.scss
@@ -131,7 +131,7 @@ footer h2 {
   }
 }
 
-#block-sharewithlits {
+#block-lits-theme-sharewithlits {
   .social-media-links--platforms {
     margin: auto;
 
