--- a/components/02-compounds/site/_page.scss
+++ b/components/02-compounds/site/_page.scss
@@ -57,7 +57,7 @@
 
 /* Elements */
 
-#block-breadcrumbs {
+#block-lits-theme-breadcrumbs {
   margin-top: $space;
   font-size: 1rem;
 }
